language/move-lang/tests/move_check/expansion/friend_decl_inner_scope_alias.exp
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/friend_decl_inner_scope_alias.move:7:12
  │
7 │     friend A;
  │            ^ Unbound module alias 'A'

